Fix h2 whitespace issues

--- a/webpages/css/styles.css
+++ b/webpages/css/styles.css
@@ -117,15 +117,16 @@ h1 {
 
 .section-wrapper {
     width:80%;
-    margin:40px auto;
-    padding-top:20px;
+    margin: 20px auto 40px;
+    padding-top: 0;
     text-align:center;
 }
 
 .section-wrapper h2 {
     font-family:'Amiri', serif;
     font-size:1.75em;
-    margin:0 0 20px; color:var(--primary-color);
+    margin-top:0;
+    color:var(--primary-color);
 }
   
 .verse {
